k8s_sdc_gke/CompleteDeployment/yaml/sdcFullDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-sdc
spec:
  selector:
    matchLabels:
      app: auth-sdc
  template:
    metadata:
      labels:
        app: auth-sdc
    spec:
      containers:
      - name: sdc
        image: streamsets/datacollector:latest
        ports:
        - containerPort: 18630
        volumeMounts:
        - name: sdc-stage-libs
          mountPath: /opt/streamsets-datacollector-latest/streamsets-libs
        - name: sdc-id
          mountPath: /data/sdc.id
          subPath: sdc.id
        - name: sdc-auth-token
          mountPath: /etc/sdc/application-token.txt
          subPath: application-token.txt
        - name: dpm-config
          mountPath: /etc/sdc/dpm.properties
          subPath: dpm.properties
      volumes:
      - name: sdc-stage-libs
        persistentVolumeClaim:
          claimName: sdc-stage-libs-pvc
      - name: sdc-id
        secret:
          secretName: sdc-id
      - name: sdc-auth-token
        secret:
          secretName: sdc-auth-token
      - name: sdc-keystore
        secret:
          secretName: sdc-keystore
      - name: dpm-config
        configMap:
          name: dpm-config

---

apiVersion: v1
kind: Service
metadata:
  name: auth-sdc-svc
  labels:
    app: auth-sdc-svc
spec:
  type: NodePort
  ports:
  - name: http
    port: 18630
    targetPort: 18630
    protocol: TCP
  selector:
    app: auth-sdc

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sdc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - sanjeev-auth-sdc
    secretName: sdc-tls
  rules:
  - host: sanjeev-auth-sdc
    http:
      paths:
      - path: /sdc(/|$)(.*)
        backend:
          serviceName: auth-sdc-svc
          servicePort: 18630
